--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/solid.css">
-    
+
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
@@ -15,17 +15,14 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <button>
-                   <i class="uis uis-bars"></i>
-            </button>
+            <i class="uis uis-bars" width="20px"></i>
             <nav>
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
-                    <li><a href="Myintro.html">My Intro</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="ContactUs.html" target="_blank">Contact Us</a></li>
-                    <li><a href="Blog.html">Blog</a></li>
-                </ul>
+                    <li><a class="menu" href="index.html"><i class="uil uil-estate"> Home</i></a></li>
+                    <li><a class="menu" href="about.html"><i class="uil uil-user"> About</i></a></li>
+                    <li><a class="menu" href="services.html"><i class="uil uil-briefcase-alt"> Services</i></a></li>
+                    <li><a class="menu" href="ContactUs.html"><i class="uil uil-message"> Contact
+                                Us</i></a></li>
             </nav>
         </div>
         <div class="main">
@@ -33,21 +30,34 @@
                 <div class="devinfo">
                     <div class="hello">Hello I am</div>
                     <div class="name">Avish Pandit</div>
-                    <div class="info">Developer, designer and technical enthusias</div>
+                    <div class="info">Developer | Designer | Technical Enthusiast</div>
                     <div class="btn">
                         <button type="button">Download CV</button>
-                        <button>About Me</button>
                     </div>
-
                 </div>
                 <div class="devpic">
-                    <img src="IMG_20230205_201049_870.jpg" alt="MyPic">
+                    <img src="ROG X NH_Til’ Death.png" alt="MyPic">
                 </div>
+            </div>
+            <div class="description">
+                <p>Currently learning web Dev,</p>
+                <p>I am a Highly organized and detail-oriented student of MediCaps university who has excellent
+                    communication skills , enabling me to effectively communicate with a wide range of people. I am
+                    seeing a part-time position in the industry in which I can put into practice my knowledge and
+                    experience, ultimately benefiting the operations of the organization that I work for. I like to play
+                    football and volleyball and I have an interest in learning new things and exploring new dimensions
+                    of my life.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, ipsum asperiores explicabo
+                    est exercitationem magni totam necessitatibus culpa reiciendis perferendis quos nobis! Iusto
+                    asperiores provident numquam minus tempora laudantium hic dolore libero ullam, dignissimos incidunt
+                    odio culpa adipisci corporis earum minima veniam eos modi deleniti! Doloribus voluptatibus aut
+                    numquam totam.</p>
             </div>
         </div>
     </div>
     <script src="main.js">
-        
+
     </script>
 </body>
+
 </html>
