--- a/ContactUs.html
+++ b/ContactUs.html
@@ -1,59 +1,72 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/solid.css">
-    
-    <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/solid.css">
+  <link rel="stylesheet" href="contact_style.css">
+  <title>Portfolio</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="sidebar">
-            <button>
-                   <i class="uis uis-bars"></i>
-            </button>
-            <nav>
-                <ul>
-                    <li><a href="Home.html">Home</a></li>
-                    <li><a href="Myintro.html">My Intro</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="ContactUs.html" target="_blank">Contact Us</a></li>
-                    <li><a href="Blog.html">Blog</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="main">
-          <div class="contactform">
-            <h1>Contact Me</h1>
-            <form>
-              <div class="mb-3">
-                <label for="ClientEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="ClientEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email or Contact No. with anyone else.</div>
-              </div>
-              <div class="mb-3">
-                <label for="ClientPhone" class="form-label" >Phone No.</label>
-                <input type="text" class="form-control" id="ClientPhone">
-              </div>
-              <div class="mb-3 form-check">
-                <input type="checkbox" id="form-check-input" >
-                <label class="form-check-label" for="exampleCheck1">Wanna Collab?</label>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
-        </div>
+  <div class="container">
+    <div class="sidebar">
+        <i class="uis uis-bars" width="20px"></i>
+        <nav>
+          <ul>
+            <li><a class="menu" href="index.html"><i class="uil uil-estate"> Home</i></a></li>
+            <li><a class="menu" href="Myintro.html"><i class="uil uil-user"> About</i></a></li>
+            <li><a class="menu" href="services.html"><i class="uil uil-briefcase-alt"> Services</i></a></li>
+            <li><a class="menu" href="ContactUs.html" ><i class="uil uil-message"> Contact Us</i></a>
+            </li>
+        </nav>
     </div>
-    <script src="main.js">
-        
-    </script>
+    <div class="main">
+      <div class="contactform">
+        <h1>Contact Us
+          <hr>
+        </h1>
+        <form>
+          <div class="mb-3">
+            <label for="ClientName" class="form-label">Name</label>
+            <input type="text" class="form-control" id="ClientName">
+          </div>
+          <div class="mb-3">
+            <label for="ClientEmail1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="ClientEmail1" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">We'll never share your email or Contact No. with anyone else.</div>
+          </div>
+          <div class="mb-3">
+            <label for="ClientPhone" class="form-label">Phone No.</label>
+            <input type="text" class="form-control" id="ClientPhone">
+          </div>
+          <div class="writetome">
+            <label for="text">Write to Us</label>
+            <input type="text">
+          </div>
+          <div class="mb-3" id="form-check">
+            <input type="checkbox" id="form-check-input">
+            <label class="form-check-label" for="exampleCheck1">Wanna Collab?</label>
+          </div>
+          <button class="button" role="button">Submit</button>
+        </form>
+      </div>
+      <div class="connect">
+        <p>Connect with us on</p>
+        <div class="logo">
+          <a href=""><i class="uil uil-linkedin"></i></a>
+          <a href=""><i class="uil uil-instagram-alt"></i></a>
+          <a href=""><i class="uil uil-twitter"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="main.js">
+
+  </script>
 </body>
 
 </html>
